fix(checkbox): spacing alignment

--- a/packages/web-components/src/components/rux-checkbox/rux-checkbox.scss
+++ b/packages/web-components/src/components/rux-checkbox/rux-checkbox.scss
@@ -21,7 +21,9 @@
 
 label {
     display: flex;
+    align-items: center;
 }
+
 .rux-checkbox {
     display: flex;
     cursor: pointer;
@@ -45,12 +47,23 @@ label {
     }
 }
 
+.rux-checkbox__control {
+    width: calc(var(--spacing-4) + var(--spacing-1)); //20px
+    height: calc(var(--spacing-4) + var(--spacing-1)); //20px
+    padding: var(--spacing-050);
+}
+
+.rux-checkbox__control svg {
+    width: 100%;
+    height: 100%;
+}
+
 .rux-checkbox:not(.rux-checkbox--disabled) .rux-checkbox__control:hover {
     --_checkbox-color-border: var(--color-border-interactive-hover);
 }
 
 .rux-checkbox__label {
-    margin-left: 0.625rem; //10px;
+    margin-left: var(--spacing-2);
 }
 
 .rux-help-text {
